added url as string  and updated ejs to add summary

--- a/ejs/data grid/index.html.ejs
+++ b/ejs/data grid/index.html.ejs
@@ -160,7 +160,7 @@
             <i class="angle up icon"></i>
         </div>
         <% let page_object = {}; %>
-        <% ["headline", "cover_image_url", "cover_image_url_7_column"].forEach(function(e){ %>
+        <% ["headline", "cover_image_url", "cover_image_url_7_column", "summary"].forEach(function(e){ %>
             <% page_object[e] = page[e]; %>
         <% }); %>
         <script>
