updated ejs file

--- a/ejs/data grid/index.html.ejs
+++ b/ejs/data grid/index.html.ejs
@@ -187,7 +187,7 @@
             </script>
         <% } %>
         <script src="<%= AWS_S3_ENDPOINT %>/lib/proto-app-init.min.js" defer></script>
-        <script src="<%= AWS_S3_ENDPOINT %>/lib/proto-app-grid-init.min.js" defer></script>
+        <script src="<%= AWS_S3_ENDPOINT %>/<%= template_page_s3 %>/proto-app-grid-init.min.js" defer></script>
         <script type="text/javascript" src="<%= AWS_S3_ENDPOINT %>/<%= template_page_s3 %>/proto-app-grid.min.js" defer></script>
     </body>
 
