--- a/src/css/data.css
+++ b/src/css/data.css
@@ -244,7 +244,7 @@
 .protograph-map-legends-container {
   text-align: left;
   position: absolute;
-  top: 0px;
+  top: 30px;
   right: 0px;
   font-family: cabin;
   font-size: 12px;
@@ -255,18 +255,27 @@
   border-collapse: collapse;
 }
 .protograph-map-legend-color {
-  /* height: 20px; */
-  width: 25px;
-  display: table-cell;
+  height: 10px; 
+  width: 10px;
+  border-radius: 8px;
+  display: inline-block;
+}
+.protograph-map-legend-color-circle {
+  height: 10px; 
+  width: 10px;
+  border-radius: 8px;
+  display: inline-block;
+  background-color: #FAA10C;
+  opacity: 0.6;
 }
 .protograph-map-legend-text {
   padding-right: 10px;
   padding-left: 5px;
-  display: table-cell;
+  display: inline-block;
 }
 .protograph-map-legend {
   margin: 5px 0px;
-  display: inline-block;
+  /*display: inline-block;*/
 }
 .protograph-card-area{
   width: 100%;
