descending order of years, order in land type, comma separated nature of conflicts

--- a/ejs/data grid/index.html.ejs
+++ b/ejs/data grid/index.html.ejs
@@ -104,7 +104,7 @@
 
 <% let language = site.primary_language.toLowerCase(); %>
     <% let body_class = language !== 'english' ? `language-${language}` : "proto-app-body"; %>
-        <% let site_name = site.name ? `By ${site.name}` : ""; %>
+        // <% let site_name = site.name ? `By ${site.name}` : ""; %>
 
             <body class="<%= body_class %>">
                 <% if (site.comscore_code) { %>
