--- a/ejs/data grid/index.html.ejs
+++ b/ejs/data grid/index.html.ejs
@@ -104,6 +104,7 @@
 
 <% let language = site.primary_language.toLowerCase(); %>
 <% let body_class = language !== 'english' ? `language-${language}` : "proto-app-body"; %>
+<% let site_name = site.name ? `By ${site.name}` : ""; %>
 
 <body class="<%= body_class %>">
     <% if (site.comscore_code) { %>
@@ -221,7 +222,7 @@
         <i class="angle up icon"></i>
     </div>
     <% let page_object = {}; %>
-    <% ["headline", "cover_image_url", "cover_image_url_7_column", "summary"].forEach(function(e){ %>
+    <% ["headline", "cover_image_url", "cover_image_url_7_column", "summary", "id"].forEach(function(e){ %>
         <% page_object[e] = page[e]; %>
     <% }); %>
     <script>
