--- a/src/css/data.css
+++ b/src/css/data.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Bitter|Cabin');
+
+@font-face {
+  font-family: AvenirLTStd-Book;
+  src: url("https://cdn.protograph.pykih.com/lib/AvenirLTStd-Book.otf") format("opentype");
+}
+
+@font-face {
+  font-family: AvenirLTStd-Medium;
+  src: url("https://cdn.protograph.pykih.com/lib/AvenirLTStd-Medium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: Avenir-Bold;
+  src: url("https://cdn.protograph.pykih.com/lib/AEH.ttf") format("opentype");
+}
+
 /* Old jaljagran-style.css  */
 .cover-image {
   background-image: url("../../../img/cover-image.png");
@@ -179,8 +196,8 @@
 .page-title {
   font-size: 42px;
   font-weight: bold;
-  /*font-family: 'Sarala', sans-serif;*/
-  color: white;
+  font-family: 'Sarala', sans-serif;
+  color: black !important;
   margin-bottom: 20px;
   bottom: 0px;
   position: absolute;
@@ -757,6 +774,167 @@
 .protograph-grid-card iframe {
   /*display: none;*/
 }
+
+/*===== Cover css =====*/
+
+.col-16-cover-area {
+    height: 430px;
+    width: 1260px;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.background-image {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+.col-16-cover-area .color-overlay {
+    height: 430px;
+    width: 1260px;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    background: rgba(207, 162, 16, 0.8);
+}
+
+.page-title {
+    font-family: "bitter";
+    font-weight: bold;
+    color: #1F1800;
+    font-size: 32px;
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+}
+
+.selected-tab-content {
+    width: 540px;
+    display: inline-block;
+    position: absolute;
+    left: 330px;
+    top: 64px;
+}
+
+.content-title {
+    font-family: "cabin";
+    font-weight: bold;
+    display: inline-block;
+    font-size: 32px;
+    color: #1F1800;
+    width: 100%;
+}
+
+.content-title img {
+    margin-left: 24px;
+    height: 24px;
+}
+
+.display-value {
+    font-family: "cabin";
+    font-weight: bold;
+    margin-top: 35px;
+    margin-bottom: 40px;
+    display: inline-block;
+    font-size: 72px;
+    color: #1F1800;
+    width: 100%;
+}
+
+p {
+    font-family: "cabin";
+    color: #1F1800;
+    line-height: 21px;
+    font-size: 14px;
+}
+
+.vertical-tabs {
+    width: 300px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+a.tab-links {
+    text-decoration: none;
+}
+
+.cover-single-tab {
+    height: 107px;
+    width: 100%;
+    background: transparent;
+    border-bottom: 1px solid #00000040;
+    padding: 19px 24px;
+    font-family: "cabin";
+    color: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    font-weight: normal;
+    cursor: pointer;
+}
+
+.tab-value {
+    font-size: 32px;
+    line-height: 56px;
+}
+
+.tab-links:last-child .single-tab {
+    border-bottom: 0px;
+    height: 109px;
+}
+
+.cover-single-tab.active {
+    background: #1F1800;
+    color: #F7C513;
+}
+
+.cover-single-tab .tab-value img {
+    float: right;
+    margin-top: 16px;
+    opacity: 0;
+}
+
+.cover-single-tab.active .tab-value img {
+    float: right;
+    margin-top: 16px;
+    opacity: 1;
+}
+
+.col-4-cover-area{
+    height: 430px;
+    width: 300px;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+}
+
+.col-4-cover-area .color-overlay {
+    height: 430px;
+    width: 300px;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    background: rgba(207, 162, 16, 0.8);
+}
+
+.col-4-cover-area .cover-single-tab{
+    height: 80px;
+    padding: 10px 20px;
+}
+
+.col-4-cover-area .cover-single-tab .tab-value{
+    line-height: 48px
+}
+
+.col-4-cover-area .tab-links:last-child .cover-single-tab {
+    height: 80px;
+}
+
+/* Note the above height and width are just samples. Change it as per the usecase. */
 
 
 @media only screen and (max-width: 450px ) {
